--- a/PaginaComCss/index.html
+++ b/PaginaComCss/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div iclass="container">
+    <div class="container">
       <header>
         <nav class="nav-bar">
           <div class="logo">
@@ -36,56 +36,74 @@
       </header>
       <main>
         <div class="banner">
-          <img src="imagens/banner_tec_senai.jpg" alt="Banner curso tecnologia senai">
+          <img
+            src="imagens/banner_tec_senai.jpg"
+            alt="Banner curso tecnologia senai"
+          />
         </div>
       </main>
       <div class="historia">
         <h2>Historia</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-           Placeat, velit. Eveniet sapiente velit optio aut magni qui 
-           maiores vero culpa quia numquam saepe praesentium, illo debitis 
-           placeat, modi harum facere.
-          </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat,
+          velit. Eveniet sapiente velit optio aut magni qui maiores vero culpa
+          quia numquam saepe praesentium, illo debitis placeat, modi harum
+          facere.
+        </p>
 
-           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Placeat, velit. Eveniet sapiente velit optio aut magni qui 
-            maiores vero culpa quia numquam saepe praesentium, illo debitis 
-            placeat, modi harum facere.
-          </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat,
+          velit. Eveniet sapiente velit optio aut magni qui maiores vero culpa
+          quia numquam saepe praesentium, illo debitis placeat, modi harum
+          facere.
+        </p>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Placeat, velit. Eveniet sapiente velit optio aut magni qui 
-              maiores vero culpa quia numquam saepe praesentium, illo debitis 
-              placeat, modi harum facere.
-            </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat,
+          velit. Eveniet sapiente velit optio aut magni qui maiores vero culpa
+          quia numquam saepe praesentium, illo debitis placeat, modi harum
+          facere.
+        </p>
       </div>
 
       <div class="colaboradores">
         <h2>Colaboradores</h2>
         <div class="cards">
           <div class="card">
-            <img src="imagens/imagem_perfil.png">
-          <h4>Nome</h4>
-          <p>Breve descrição ou cargo</p>
+            <img src="imagens/imagem_perfil.png" />
+            <h4>Nome</h4>
+            <p>Breve descrição ou cargo</p>
           </div>
 
           <div class="card">
-            <img src="imagens/imagem_perfil.png">
-          <h4>Nome</h4>
-          <p>Breve descrição ou cargo</p>
+            <img src="imagens/imagem_perfil.png" />
+            <h4>Nome</h4>
+            <p>Breve descrição ou cargo</p>
           </div>
 
           <div class="card">
-            <img src="imagens/imagem_perfil.png">
-          <h4>Nome</h4>
-          <p>Breve descrição ou cargo</p>
+            <img src="imagens/imagem_perfil.png" />
+            <h4>Nome</h4>
+            <p>Breve descrição ou cargo</p>
           </div>
-
-          
-
         </div>
-      </div >
-
+      </div>
+      <!--div maps-->
+      <div>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15356.705599787929!2d-47.93201491284178!3d-15.79465!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935a3a8573c445db%3A0x3eecc7448f1a024b!2sSenai%20Bras%C3%ADlia!5e0!3m2!1spt-BR!2sbr!4v1688510144935!5m2!1spt-BR!2sbr"
+          width="90%"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </div>
+      <!--Rodapé-->
+      <footer>
+        <span>Todos os direitos reservados &copy; Maria 2023</span>
+      </footer>
     </div>
   </body>
 </html>
